Add divs for phone, mail, url

--- a/lib/components/contact-component/contact_component.html
+++ b/lib/components/contact-component/contact_component.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<section-component>
+    <div class="contacttitle">
+        <h2>Contact</h2>
+    </div>
+    <div class="contactphone">
+        <h4>{{phone}}</h4>
+    </div>
+    <div class="contactemail">
+        <h4>{{email}}</h4>
+    </div>
+    <div class="contacturl">
+        <h4>{{url}}</h4>
+    </div>
+</section-component>
