Import and display contact component

--- a/lib/components/res-component/res_component.html
+++ b/lib/components/res-component/res_component.html
@@ -1,1 +1,3 @@
 <toolbar-component></toolbar-component>
+<contact-component [phone]="contact.phone" [email]="contact.email"
+                   [url]="contact.url"></contact-component>
