use ng-content for pagebody

--- a/lib/components/toolbar-component/toolbar_component.html
+++ b/lib/components/toolbar-component/toolbar_component.html
@@ -29,4 +29,8 @@
 
             <!-- main area -->
             <div class="col-xs-12 col-sm-9">
-                <h1>Shrink Width to Collapse Sidebar</h1>
+                <ng-content></ng-content>
+            </div>
+        </div>
+    </div>
+</div>
