Wrap inside toolbar component

--- a/lib/components/res-component/res_component.html
+++ b/lib/components/res-component/res_component.html
@@ -1,3 +1,4 @@
-<toolbar-component></toolbar-component>
-<contact-component [phone]="contact.phone" [email]="contact.email"
-                   [url]="contact.url"></contact-component>
+<toolbar-component>
+    <contact-component [phone]="contact.phone" [email]="contact.email"
+                       [url]="contact.url"></contact-component>
+</toolbar-component>
