Import and display about-component

--- a/lib/components/res-component/res_component.html
+++ b/lib/components/res-component/res_component.html
@@ -1,4 +1,5 @@
 <toolbar-component>
     <contact-component [phone]="contact.phone" [email]="contact.email"
                        [url]="contact.url"></contact-component>
+    <about-component></about-component>
 </toolbar-component>
