--- a/lib/components/project-component/project_component.html
+++ b/lib/components/project-component/project_component.html
@@ -1,5 +1,5 @@
 <div class="singleproject">
-    <div class="projecttitle">{{title}}</div>
+    <div class="projecttitle"><h2>{{title}}</h2></div>
     <div class="projectdescription">{{description}}</div>
     <div class="projectscreenshot">{{screenshot}}</div>
 </div>
