Fix spelling of projects selector

--- a/lib/components/res-component/res_component.html
+++ b/lib/components/res-component/res_component.html
@@ -2,4 +2,5 @@
     <contact-component [phone]="contact.phone" [email]="contact.email"
                        [url]="contact.url"></contact-component>
     <about-component></about-component>
+    <projects></projects>
 </toolbar-component>
