Fix html import, let binding

--- a/lib/components/employment-list/employment_list.html
+++ b/lib/components/employment-list/employment_list.html
@@ -1,6 +1,6 @@
 <section-component>
   <div class="employmentlist">
-    <div *ngFor="let emp of employmentlist" class="singleemployment">
+    <div *ngFor="#emp of employmentlist" class="singleemployment">
       <employment-component [period]="emp.period" [company]="emp.company"
                             [position]="emp.position" [description]="emp.description">
       </employment-component>
