import and display employment list

--- a/lib/components/res-component/res_component.html
+++ b/lib/components/res-component/res_component.html
@@ -3,4 +3,5 @@
                        [url]="contact.url"></contact-component>
     <about-component></about-component>
     <projects></projects>
+    <employment-list></employment-list>
 </toolbar-component>
