--- a/lib/components/res-component/res_component.html
+++ b/lib/components/res-component/res_component.html
@@ -4,4 +4,5 @@
     <about-component></about-component>
     <projects></projects>
     <employment-list></employment-list>
+    <education-list></education-list>
 </toolbar-component>
