Import and display language-list

--- a/lib/components/res-component/res_component.html
+++ b/lib/components/res-component/res_component.html
@@ -5,4 +5,5 @@
     <projects></projects>
     <employment-list></employment-list>
     <education-list></education-list>
+    <language-list></language-list>
 </toolbar-component>
