Import and display awardlist component

--- a/lib/components/res-component/res_component.html
+++ b/lib/components/res-component/res_component.html
@@ -6,4 +6,5 @@
     <employment-list></employment-list>
     <education-list></education-list>
     <language-list></language-list>
+    <award-list></award-list>
 </toolbar-component>
