Display and import profilelist

--- a/lib/components/res-component/res_component.html
+++ b/lib/components/res-component/res_component.html
@@ -7,4 +7,5 @@
     <education-list></education-list>
     <language-list></language-list>
     <award-list></award-list>
+    <profile-list></profile-list>
 </toolbar-component>
