Import and display skill component

--- a/lib/components/res-component/res_component.html
+++ b/lib/components/res-component/res_component.html
@@ -8,4 +8,5 @@
     <language-list></language-list>
     <award-list></award-list>
     <profile-list></profile-list>
+    <skill-list></skill-list>
 </toolbar-component>
