--- a/lib/components/about-component/about_component.html
+++ b/lib/components/about-component/about_component.html
@@ -1,6 +1,10 @@
 <section-component>
-    <div class="abouttitle">
-        <h2>About</h2>
+    <div class="mdl-grid">
+        <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--12-col-phone">
+            <h3 class="mdl-card__title">About</h3>
+        </div>
+        <div class="mdl-cell mdl-cell--8-col-desktop mdl-cell--12-col-phone">
+            <p>{{about}}</p>
+        </div>
     </div>
-    <p>{{about}}</p>
 </section-component>
