--- a/lib/components/res-component/res_component.html
+++ b/lib/components/res-component/res_component.html
@@ -1,5 +1,5 @@
 <toolbar-component>
-    <contact-component [phone]="contact.phone" [email]="contact.email"
+    <contact-component [name]="contact.name" [phone]="contact.phone" [email]="contact.email"
                        [url]="contact.url"></contact-component>
     <about-component></about-component>
     <projects></projects>
