add mdl-grid for language layout

--- a/lib/components/language-component/language_component.html
+++ b/lib/components/language-component/language_component.html
@@ -1,8 +1,8 @@
-<div class="languagecomponent">
-  <div class="language">
+<div class="languagecomponent mdl-grid">
+  <div class="language  mdl-cell mdl-cell--3-col-desktop mdl-cell--12-col-phone">
     <h3>{{lang}}</h3>
   </div>
-  <div class="level">
-    <p>{{level}}</p>
+  <div class="level mdl-cell mdl-cell--3-col-desktop mdl-cell--12-col-phone mdl-cell--middle">
+    <h5>{{level}}</h5>
   </div>
 </div>
