use mdl-card directives for supporting text

--- a/lib/components/language-component/language_component.html
+++ b/lib/components/language-component/language_component.html
@@ -1,8 +1,8 @@
 <div class="languagecomponent mdl-grid">
-  <div class="language  mdl-cell mdl-cell--3-col-desktop mdl-cell--12-col-phone">
+  <div class="language  mdl-cell mdl-cell--3-col-desktop mdl-cell--12-col-phone mdl-card__title">
     <h3>{{lang}}</h3>
   </div>
-  <div class="level mdl-cell mdl-cell--3-col-desktop mdl-cell--12-col-phone mdl-cell--middle">
+  <div class="level mdl-cell mdl-cell--3-col-desktop mdl-cell--12-col-phone mdl-cell--middle mdl-card__supporting-text">
     <h5>{{level}}</h5>
   </div>
 </div>
