--- a/lib/components/employment-component/employment_component.html
+++ b/lib/components/employment-component/employment_component.html
@@ -6,10 +6,10 @@
         <h3>{{position}}</h3>
     </div>
     <div class="yearsanddescription mdl-grid">
-        <div class="mdl-cell mdl-cell--2-col years">
+        <div class="mdl-cell mdl-cell--2-col years mdl-card__supporting-text">
             <h5>{{period}}</h5>
         </div>
-        <div class="mdl-cell mdl-cell--8-col description">
+        <div class="mdl-cell mdl-cell--8-col description mdl-card__supporting-text">
             <p>{{description}}</p>
         </div>
     </div>
