Use Subsection component for employment sections

--- a/lib/components/employment-component/employment_component.html
+++ b/lib/components/employment-component/employment_component.html
@@ -1,4 +1,4 @@
-<div class="mdl-card mdl-shadow--2dp">
+<subsection-component>
     <div class="companyandtitle mdl-grid">
         <div class="mdl-cell mdl-cell--4-col employer">
             <h3 class="mdl-card__title-text">{{company}}</h3>
@@ -15,4 +15,4 @@
             </div>
         </div>
     </div>
-</div>
+</subsection-component>
